--- a/package.json
+++ b/package.json
@@ -18,18 +18,26 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@clerk/nextjs": "^6.31.4",
+		"@google/generative-ai": "^0.24.1",
+		"@react-three/drei": "^10.7.3",
+		"@react-three/fiber": "^9.3.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
 		"@trpc/client": "^11.0.0",
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
+		"@types/three": "^0.179.0",
 		"drizzle-orm": "^0.41.0",
 		"next": "^15.2.3",
+		"node-cron": "^4.2.1",
 		"postgres": "^3.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"rss-parser": "^3.13.0",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.1",
+		"three": "^0.179.1",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
