--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^6.31.4",
+		"@clerk/themes": "^2.4.13",
 		"@google/generative-ai": "^0.24.1",
 		"@react-three/drei": "^10.7.3",
 		"@react-three/fiber": "^9.3.0",
@@ -29,6 +30,7 @@
 		"@trpc/server": "^11.0.0",
 		"@types/three": "^0.179.0",
 		"drizzle-orm": "^0.41.0",
+		"lucide-react": "^0.540.0",
 		"next": "^15.2.3",
 		"node-cron": "^4.2.1",
 		"postgres": "^3.4.4",
