--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
 		"@types/three": "^0.179.0",
+		"axios": "^1.11.0",
+		"chart.js": "^4.5.0",
 		"drizzle-orm": "^0.41.0",
 		"lucide-react": "^0.540.0",
 		"next": "^15.2.3",
 		"node-cron": "^4.2.1",
 		"postgres": "^3.4.4",
 		"react": "^19.0.0",
+		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.0.0",
 		"rss-parser": "^3.13.0",
 		"server-only": "^0.0.1",
@@ -45,6 +48,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@tailwindcss/postcss": "^4.0.15",
+		"@types/axios": "^0.14.4",
 		"@types/node": "^20.14.10",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
